# category-theory

./: .dir-locals.el  .editorconfig  .gitignore  .travis.yml  Abstraction.v  Adjunction.v  Applicative.v  Axioms.v  Bestiary.v  BiCCC.v  Bicartesian.v  Bifunctor.v  Book.bib  Book.tex  CLAUDE.md  Cartesian.v  Cat.v  Category.v  CategoryTheory.bib  Closed.v  Cocartesian.v  Cone.v  Const.v  Constant.v  Coq.v  CpdtTactics.v  Dreyer.v  Either.v  Faithful.v  Functor.v  Functors.v  Groupoid.v  Identity.v  Initial.v  Intro.v  Iso.v  Isomorphism.v  LICENSE  LICENSE.md  Lambda.v  (+41 more)
.claude/: settings.local.json
.nix/: config.nix  coq-nix-toolbox.nix
Adjunction/: Compose.v  Continuity.v  GAFT.v  Hom.v  Opposite.v  README.md  SAFT.v
Algebra/: Basic.v  Monoid.v
Comonad/: CoKleisli.v  Coalgebra.v  Core.v  Duality.v  GUIDE.md  Strong.v
Construct/: Opposite.v
Construction/: Arrow.v  Cayley.v  Chain.v  ColouredPROP.v  Comma.v  Coproduct.v  Day.v  DecoratedCospan.v  Discrete.v  Enriched.v  FAlg.v  FCoalg.v  Free.v  Funny.v  Grothendieck.v  Groupoid.v  Indexed.v  Karoubi.v  Localization.v  Opposite.v  PROP.v  Product.v  Quotient.v  Reflective.v  Slice.v  Sq.v  Subcategory.v
Endo/: ACompose.v  Applicative.v  Basics.v  Category.v  Conduit.v  Cont.v  Either.v  EitherT.v  FCompose.v  Functor.v  Iso.v  LogicT.v  MCompose.v  MMorph.v  Makefile  Maybe.v  Monad.v  README.md  Trans.v  Tuple.v
Functor/: Applicative.v  Bifunctor.v  Compose.v  Constant.v  Coproduct.v  Diagonal.v  Hom.v  Id.v  Monad.v  Monoidal.v  Op.v  Opposite.v  Product.v  Representable.v  Strong.v  Traversable.v  Yoneda.v
Instance/: AD.v  AST.v  Adj.v  Adjoints.v  CMon.v  Cat.v  Comp.v  Concrete.v  Cones.v  Coq.v  Discrete.v  Ens.v  Fact.v  FinSet.v  Finite.v  Fun.v  Lambda.v  LambdaOld.v  Nat.v  Omega.v  One.v  Par.v  ParE.v  Parallel.v  Poset.v  Props.v  Proset.v  Rel.v  Roof.v  Sets.v  Shapes.v  StrictCat.v  These.v  Trie.v  Two.v  ZX.v  Zero.v
Lib/: CSetoid.v  Datatypes.v  Equality.v  FMapExt.v  Foundation.v  IList.v  Lambda.v  MapDecide.v  NETList.v  Nomega.v  Same_set.v  Setoid.v  TList.v  Tactics.v  Tactics2.v  Tree.v
Misc/: Abstraction.v  CpdtTactics.v  Heyting.v  ListF.v  Pi.v  Reified.v  Represented.v  Tuple.v
Monad/: Adjoint.v  Adjunction.v  Algebra.v  Comparison.v  Compose.v  Composition.v  Distributive.v  Graded.v  Kleisli.v  Lifting.v  Monoid.v  Strong.v  Thunkable.v  Transformer.v
Pending/: Applicative.v  Cone.v  Const.v  Diag.v  Faithful.v  Finite.v  Limit.v  Metacategory.v  Monoidal.v  Profunctor.v  Pullback.v  Sergei.v  Sherman.v  Tactics.v  Tuple.v
Sets/: Axioms.v  Families.v  Lib.v  Makefile  Pairs.v  Powers.v  Products.v  Separation.v  Singletons.v  Structures.v  Unions.v
Solver/: .gitmodules  Arrows.v  Categories.v  Decide.v  Denote.v  Env.v  Expr.v  Logic.v  NArrows.v  Normal.v  Partial.v  Reflect.v  (+5 more)
(+572 files in other folders)
