opam-version: "2.0"
maintainer: "johnw@newartisans.com"
version: "dev"

homepage: "https://github.com/jwiegley/category-theory"
dev-repo: "git+https://github.com/jwiegley/category-theory.git"
bug-reports: "https://github.com/jwiegley/category-theory/issues"
license: "BSD-3-Clause"

synopsis: "An axiom-free formalization of category theory in Coq"
description: """
An axiom-free formalization of category theory in Coq for personal study and
practical work.
"""

build: [make "JOBS=%{jobs}%" ]
install: [make "install"]
depends: [
  "coq" {(>= "8.10" & < "8.16~") | (= "dev")}
  "coq-equations" {(>= "1.2" & < "1.4~") | (= "dev")}
  "coq-hammer" {(>= "1.1" & < "1.4~") | (= "dev")}
]

tags: [
]
authors: [
  "John Wiegley"
]
