opam-version: "2.0"
maintainer: "johnw@newartisans.com"

homepage: "https://github.com/jwiegley/category-theory"
dev-repo: "git+https://github.com/jwiegley/category-theory.git"
bug-reports: "https://github.com/jwiegley/category-theory/issues"
license: "BSD-3-Clause"

synopsis: "An axiom-free formalization of category theory in Coq"
description: """
An axiom-free formalization of category theory in Coq for personal study and
practical work.
"""

build: [make "JOBS=%{jobs}%" ]
install: [make "install"]
depends: [
  "coq" {(>= "8.14" & < "8.17~") | (= "dev")}
  "coq-equations" {(>= "1.2" & < "1.4~") | (= "dev")}
]

url {
  src: "https://github.com/jwiegley/category-theory/archive/refs/tags/1.0.0.tar.gz"
  checksum: "sha256=d8a9fce1e20d0bd6e756957bf40c4deee1d83732c6c949a1dc5c290136ced60b"
}

tags: [
  "keyword: category theory"
  "category: Mathematics/Category Theory"
  "date: 2022-07-22"
  "logpath: Category"
]
authors: [
  "John Wiegley"
]
